<resources>
    <string name="app_name">OXO Stay - Partners</string>
    <string name="app_name_prefix">OXO Stay</string>
    <string name="app_name_suffix">for partners</string>


    <!--Login screen Strings-->
    <string name="login_now">Login now</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile no.</string>
    <string name="user_name">User name</string>
    <string name="not_registered">Not Registered yet? Sign up here</string>
    <string name="title_activity_nav_home">NavHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Current user -</string>
    <string name="nav_header_subtitle">Hotel Parth INN</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--Nav menu-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_bookings">Bookings</string>
    <string name="menu_manage_rates_rooms">Manage rates / rooms</string>
    <string name="menu_amenities">Amenities</string>
    <string name="menu_policy_updates">Policy updates</string>
    <string name="menu_user_access">User access</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_change_password">Change password</string>
    <string name="menu_logout">Logout</string>


    <!-- My Bookings-->
    <string name="upcoming_bookings">Upcoming Bookings</string>
    <string name="bookings_history">Bookings History</string>

    <!-- Policy -->
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>

    <!-- Register -->
    <string name="full_name">Full name</string>
    <string name="address">Address</string>
    <string name="attach_documents">Documents required to register:</string>

    <!--Documents-->
    <string name="aadhaar">Click here to select your Aadhaar card</string>
    <string name="aadhaar_back">Click here to select your Aadhaar card\'s back</string>
    <string name="pan_card">Click here to select your PAN Card</string>
    <string name="gst_certificate">Click here to select your GST Certificate</string>

    <!--Manage-->
    <string name="choose_from">Choose Date:</string>
    <string name="three_hours_rate">1119</string>
    <string name="six_hours">1400</string>
    <string name="twelve_hours">1800</string>
    <string name="zero_value">0</string>

    <!--Profile-->
    <string name="hotel_contact">Hotel Contact: </string>
    <string name="manager_name">Manager Name: </string>
    <string name="hotel_address">Hotel Address: </string>
    <string name="hotel_email">Hotel Email: </string>
    <string name="hotel_s_email">Hotel Secondary Email: </string>

    <!--Register-->
    <string name="register_success">Thank you for registering with OXO Stay. Your request to add your hotel has been sent to the admin for approval. Please do not uninstall the application till we approve or decline your request for the same.</string>
    <string name="title_activity_maps2">Map</string>


</resources>