<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_bookings"
            android:title="@string/menu_bookings" />
        <item
            android:id="@+id/nav_manageratesroom"
            android:icon="@drawable/ic_rates"
            android:title="@string/menu_manage_rates_rooms" />
        <item
            android:id="@+id/nav_amenities"
            android:icon="@drawable/ic_amenities"
            android:title="@string/menu_amenities" />

        <item
            android:id="@+id/nav_policy_updates"
            android:icon="@drawable/ic_termsandconditions"
            android:title="@string/menu_policy_updates" />

        <item
            android:id="@+id/nav_user_access"
            android:icon="@drawable/ic_user_access"
            android:title="@string/menu_user_access" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_changepassword"
            android:title="@string/menu_change_password" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>