<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/partnerbg"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAppPrefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_100_dp"
                android:layout_marginTop="@dimen/_15_dp"
                android:fontFamily="@font/robotomedium"
                android:gravity="left"
                android:text="@string/app_name_prefix"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_30_dp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAppSuffix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_100_dp"
                android:fontFamily="@font/robotomedium"
                android:gravity="right"
                android:text="@string/app_name_suffix"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_15_dp"
                app:layout_constraintTop_toBottomOf="@id/tvAppPrefix" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50_dp"
                android:fontFamily="@font/robotomedium"
                android:gravity="center"
                android:text="@string/login_now"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_30_dp"
                app:layout_constraintTop_toBottomOf="@id/tvAppSuffix" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5_dp"
                android:layout_marginTop="@dimen/_15_dp"
                android:orientation="vertical"
                android:padding="@dimen/_20_dp"
                app:layout_constraintTop_toBottomOf="@id/tvLoginNow">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10_dp"
                    android:fontFamily="@font/robotomedium"
                    android:gravity="left"
                    android:text="@string/user_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_17_dp"
                    app:layout_constraintTop_toBottomOf="@id/tvLoginNow" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPhNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10_dp"
                    android:background="@drawable/edittextstyle"
                    android:elevation="@dimen/_5_dp"
                    android:padding="@dimen/_10_dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10_dp"
                    android:layout_marginTop="@dimen/_5_dp"
                    android:fontFamily="@font/robotomedium"
                    android:gravity="left"
                    android:text="@string/password"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_17_dp"
                    app:layout_constraintTop_toBottomOf="@id/tvLoginNow" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10_dp"
                    android:background="@drawable/edittextstyle"
                    android:elevation="@dimen/_5_dp"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10_dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGrey" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10_dp"
                    android:fontFamily="@font/robotomedium"
                    android:gravity="left"
                    android:text="@string/not_registered"
                    android:background="#75000000"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15_dp"
                    app:layout_constraintTop_toBottomOf="@id/etPassword" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20_dp"
                    android:layout_marginTop="@dimen/_50_dp"
                    android:background="@drawable/btloginstyle"
                    android:fontFamily="@font/robotomedium"
                    android:padding="@dimen/_5_dp"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_17_dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>