<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activities.ui.register.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size_default"
        android:background="@color/colorBlack"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="26dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="VectorDrawableCompat" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toolbarTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/robotomedium"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_30_dp"
            android:paddingLeft="@dimen/_30_dp"
            android:text="Register"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/toolbar_title_size" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20_dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotomedium"
                android:text="@string/full_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_15_dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5_dp"
                android:background="@drawable/etstyle"
                android:padding="@dimen/_7_dp"
                android:textColor="@color/colorBlack" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20_dp"
                android:fontFamily="@font/robotomedium"
                android:text="@string/mobile_number"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_15_dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5_dp"
                android:background="@drawable/etstyle"
                android:inputType="numberDecimal"
                android:padding="@dimen/_7_dp"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20_dp"
                android:fontFamily="@font/robotomedium"
                android:text="@string/address"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_15_dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5_dp"
                android:background="@drawable/etstyle"
                android:padding="@dimen/_7_dp"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAttachDocuments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20_dp"
                android:fontFamily="@font/robotomedium"
                android:text="@string/attach_documents"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_15_dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAadhaarcardfront"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20_dp"
                    android:fontFamily="@font/robotomedium"
                    android:text="Aadhaar card:"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_15_dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btAadhaar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bt_style"
                    android:elevation="@dimen/_5_dp"
                    android:inputType="textCapSentences"
                    android:text="@string/aadhaar"
                    android:textColor="@color/colorWhite" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAadhaarcardback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20_dp"
                    android:visibility="gone"
                    android:fontFamily="@font/robotomedium"
                    android:text="Aadhaar card back:"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_15_dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btAadhaarBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bt_style"
                    android:elevation="@dimen/_5_dp"
                    android:visibility="gone"
                    android:inputType="textCapSentences"
                    android:text="@string/aadhaar_back"
                    android:textColor="@color/colorWhite" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPancard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20_dp"
                    android:fontFamily="@font/robotomedium"
                    android:text="PAN card:"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_15_dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btPanCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bt_style"
                    android:elevation="@dimen/_5_dp"
                    android:inputType="textCapSentences"
                    android:text="@string/pan_card"
                    android:textColor="@color/colorWhite" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvGSTCertificate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20_dp"
                    android:fontFamily="@font/robotomedium"
                    android:text="GST Certificate:"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_15_dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btGstCertificate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bt_style"
                    android:elevation="@dimen/_5_dp"
                    android:inputType="textCapSentences"
                    android:text="@string/gst_certificate"
                    android:textColor="@color/colorWhite" />



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bt_style"
                    android:elevation="@dimen/_5_dp"
                    android:inputType="textCapSentences"
                    android:text="Register"
                    android:layout_marginTop="@dimen/_30_dp"
                    android:fontFamily="@font/robotomedium"
                    android:layout_marginHorizontal="@dimen/_50_dp"
                    android:textColor="@color/colorWhite" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>