<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".activities.NavHomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="@dimen/toolbar_title_size"
                android:layout_height="match_parent"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:id="@+id/toolbarTitle"
                android:fontFamily="@font/robotomedium"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:text="@string/app_name_prefix"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_size_default"
        android:orientation="vertical">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size_default"
        android:background="@color/colorBlack"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/llTbMain">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:textSize="@dimen/toolbar_title_size"
            android:layout_height="match_parent"
            android:id="@+id/tvSecondToolbarTitle"
            android:fontFamily="@font/robotomedium"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="My Bookings"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/activity_bg"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:id="@+id/llMain"
        android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llToggleBooking"
            android:orientation="horizontal"
            android:weightSum="1">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/btUpcomingBookings"
                android:textColor="@color/colorBlack"
                android:background="@drawable/bookings_bt_left"
                android:text="@string/upcoming_bookings"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/ivVerticalLine"
                app:srcCompat="@drawable/ic_verticalline"
                tools:ignore="VectorDrawableCompat" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/bookings_bt_right"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:id="@+id/btBookingsHistory"
                android:text="@string/bookings_history"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ssname" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rvBookings"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="gone"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>